# finance_llm_data

./: Data.ipynb  README.md  finance_data.py  marker_main.py  pyproject.toml  requirements.txt
earnings_calls_src/: __init__.py  main_earningsData.py
filings_src/: __init__.py  secData.py  sec_filings.py
filings_src/prepline_sec_filings/: fetch.py  sec_document.py
marker_sec_src/: __init__.py  pdf_to_md.py  pdf_to_md_parallel.py  sec_filings_to_pdf.py
output/SEC_EDGAR_FILINGS/GOOG-2024/: metadata.json
