[tool.poetry]
name = "finance-llm-data"
version = "0.1.0"
description = "Financial Data for LLM applications"
authors = ["Astarag Mohapatra <athekunal@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pdfkit = "1.0.0"
marker-pdf = "0.2.13"
pandas = "2.0.3"
aiohttp = "3.8.5"
langchain = "0.1.20"
nltk = "3.8.1"
numpy = "1.25.0"
ratelimit = "2.2.1"
requests = "2.31.0"
scikit-learn = "1.3.0"
starlette = "0.36.3"
tenacity = "8.2.2"
tqdm = "4.65.0"
typing-extensions = "4.9.0"
unstructured = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
